# codememory-mcp

./: .gitignore  Cargo.toml  README.md
src/: main.rs  server.rs
src/core/: git.rs  history.rs  indexer.rs  mod.rs  sessions.rs
src/db/: connection.rs  mod.rs  schema.rs
src/parsers/: mod.rs  tree_sitter.rs
src/tools/: feedback.rs  file_details.rs  mod.rs  onboarding.rs  search.rs  smart_context.rs  working_set.rs
src/utils/: logger.rs
