[package]
name = "codememory-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }

# SQLite (Synchronous / Blocking)
rusqlite = { version = "0.31", features = ["bundled"] }



# Tree-sitter
tree-sitter = "0.26"



# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing for indexer
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
ignore = "0.4.26"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
streaming-iterator = "0.1.9"
uuid = { version = "1.23.3", features = ["v4"] }
